<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/welcome"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <Button
            android:id="@+id/pbandToK_button"
            android:layout_width="319dp"
            android:layout_height="wrap_content"
            android:text="@string/pbandToK" />

     	<Button
     	    android:id="@+id/kToPband_button"
     	    android:layout_width="match_parent"
     	    android:layout_height="wrap_content"
     	    android:text="@string/kToPband" />

    </LinearLayout>

</LinearLayout>

