<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:gravity="left|top"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/inputTextTextView"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/pband" />

        <EditText
            android:id="@+id/inputEditText"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="100.0" >

            <requestFocus />
        </EditText>

    </LinearLayout>
	
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal" >
        
		<TextView
		    android:layout_width="150dp"
		    android:layout_height="wrap_content"
		    android:text="@string/measurementRange" />
		
		<EditText
		    android:id="@+id/measurementRangeLowEditText"
		    android:layout_width="80dp"
		    android:layout_height="wrap_content"
		    android:inputType="numberSigned|numberDecimal"
		    android:text="0.0" />

		<EditText
		    android:id="@+id/measurementRangeHighEditText"
		    android:layout_width="80dp"
		    android:layout_height="wrap_content"
		    android:inputType="numberSigned|numberDecimal"
		    android:text="100.0" >

		</EditText>
	</LinearLayout>
	
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/outputRange" />

        <EditText
            android:id="@+id/outputRangeLowEditText"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:inputType="numberSigned|numberDecimal"
            android:text="0.0" />

        <EditText
            android:id="@+id/outputRangeHighEditText"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:inputType="numberSigned|numberDecimal"
            android:text="100.0" />
    </LinearLayout>

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="159dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="170dp"
        android:text="@string/calculate" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/resultTextTextView"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:text="K"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:text="0.0"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
